Bug 78510 - FILEOPEN: MSO ODT - Bullet points in wrong location
Summary: FILEOPEN: MSO ODT - Bullet points in wrong location
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: Other All
: low minor
Assignee: Michael Stahl
URL:
Whiteboard: odf target:7.6.0 target:24.8.0
Keywords:
Depends on:
Blocks: ODF-import Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2014-05-10 00:03 UTC by Yousuf Philips (jay) (retired)
Modified: 2025-06-02 13:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
word 2013 .odt file (44.22 KB, application/vnd.oasis.opendocument.text)
2014-05-10 00:03 UTC, Yousuf Philips (jay) (retired)
Details
shows the bullet list in word 2013, LibO and calligra words (153.65 KB, image/jpeg)
2014-05-10 00:04 UTC, Yousuf Philips (jay) (retired)
Details
Reduced DOCX compared MSO LO (57.66 KB, image/png)
2020-05-06 11:37 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-10 00:03:32 UTC
Created attachment 98796 [details]
word 2013 .odt file

I download the .docx file found at < http://download.microsoft.com/documents/uk/partner/publicsector/DraftMicrosoftResponsetoGovernment.docx > and opened it in word 2013 and saved it as an .odt file. I then opened the file in LibO and on page 17, the bullet list bullets are not in the correct location.

This was tested in Linux Mint on the last releases from 3.6 to 4.2 and 4.3 alpha. It shows correctly in calligra words.
Comment 1 Yousuf Philips (jay) (retired) 2014-05-10 00:04:16 UTC
Created attachment 98797 [details]
shows the bullet list in word 2013, LibO and calligra words
Comment 2 Cor Nouws 2014-05-11 08:47:57 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2014-09-26 08:52:23 UTC
I'm seeing the bullets outside the paragraphs like in the word & calligra screenshots, but there is still an unnecessary indent for the bullets.

Version: 4.4.0.0.alpha0+
Build ID: 0a32edcdc2bda75a7536ce7f88c91cbc56e7afb1
TinderBox: Win-x86@39, Branch:master, Time: 2014-09-24_00:45:04
Comment 4 Yousuf Philips (jay) (retired) 2014-09-26 21:30:57 UTC
Problem still present in master.

Version: 4.4.0.0.alpha0+
Build ID: df73f4115cfe4d07e4159adf087571687eb173ec
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-09-25_23:36:54

In Word, left indent is 0.13" and hanging is 0.25". In LibO, only left indent is set to 0.37".
Comment 5 QA Administrators 2015-10-14 19:57:19 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2016-11-08 11:51:27 UTC Comment hidden (obsolete)
Comment 7 vihsa 2017-06-01 06:37:33 UTC
reproducible with lo viewer version: 5.5.0.0.alpha0+ / build id : ec79f34 / android 5.1
Comment 8 vihsa 2017-09-05 05:00:42 UTC
repro
lo viewer v1
lo viewer v4
lo viewer v6
lo viewer v8
Comment 9 Yousuf Philips (jay) (retired) 2017-09-30 16:56:38 UTC
Still repo.

Version: 6.0.0.0.alpha0+
Build ID: 13df3777e4b6ff7537692b396be67a5fd2b9b001 [2017-09-29]
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 10 QA Administrators 2018-10-01 02:54:28 UTC Comment hidden (obsolete)
Comment 11 Timur 2020-05-06 11:37:40 UTC
Created attachment 160428 [details]
Reduced DOCX compared MSO LO

DOCX wasn't attached in this and other bugs with the same example, bug 78509, bug 78351. Only in bug 78352 there's reduced DOCX attachment 137447 [details].

I confirm the behavior with attached ODT and reduced DOCX saved in MSO 2016 as ODT.
Comment 12 Regina Henschel 2020-09-11 16:59:22 UTC
The problem is in 19.237 fo:margin-left and 19.246 fo:text-indent (ODF 1.3 part 3). They have the wording "Its value is only considered for paragraphs inside a list item whose paragraph styles do not specify a fo:text-indent attribute or a fo:margin-left attribute." and "It is used for paragraphs inside list items whose paragraph styles do not specify an fo:text-indent or fo:margin-left attribute. " respectively.

LibreOffice treats the properties as block: If one of them is present in the paragraph style (here fo:margin-left="0.375in") then for both attributes the paragraph style is used.

MS Office treats them individually. For fo:margin-left the paragraph style is used, for fo:text-indent the list style is used.

That needs to cleared in the ODF TC.

When importing texts from MS Office, LibreOffice can avoid the problem by setting the "fo:text-indent" attribute explicitly in the paragraph format.
Comment 13 QA Administrators 2022-09-12 03:40:19 UTC Comment hidden (obsolete)
Comment 14 Commit Notification 2023-02-24 07:33:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db115bec9254417ef7a3faf687478fe5424ab378

tdf#78510 sw,cui: split SvxLRSpaceItem for SwTextNode, SwTextFormatColl

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-02-24 07:33:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0168e1eb65103afde24d4a2a62175946b1c0d33e

tdf#78510 sw: combine items from SwTextNode and SwNumFormat

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Michael Stahl 2023-02-24 13:29:28 UTC
this should be fixed on master
Comment 17 Commit Notification 2024-05-16 07:54:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7fcd5ac42086f1374c3bd5eb2be9a59e6f38f2e3

tdf#72511 tdf#78510 ww8import: recombine into SvxLRSpaceItem for EE

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.