ofz#56345 Heap-buffer-overflow

happening since:

commit db115bec9254417ef7a3faf687478fe5424ab378
Date:   Tue Feb 14 18:03:55 2023 +0100

    tdf#78510 sw,cui: split SvxLRSpaceItem for SwTextNode, SwTextFormatColl

but due to

commit 29dfcc7521311e547fc069466cc3edc9fcbdbe03
Date:   Mon Nov 23 16:17:37 2015 +0100

    tdf#94088 add import of HTML inline graphics

splitting the condition that used to fall through to default handling
with an unrelated RES_BACKGROUND case instead

Change-Id: I26a077c755f214cf35582ec146fcf34f87cc4494
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147688
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>